--- a/Sunwise/View/Dashboard/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Dashboard/Base.lproj/Main.storyboard
@@ -33,9 +33,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Ucc-bZ-XfW" kind="relationship" relationship="viewControllers" id="D9J-Rv-hqp"/>
-                        <segue destination="ZFJ-uJ-YiX" kind="relationship" relationship="viewControllers" id="pGp-c9-7rD"/>
-                        <segue destination="Gh2-Gs-Wvp" kind="relationship" relationship="viewControllers" id="r8O-nd-KhH"/>
+                        <segue destination="ZFJ-uJ-YiX" kind="relationship" relationship="viewControllers" id="UIs-er-KbC"/>
+                        <segue destination="Ucc-bZ-XfW" kind="relationship" relationship="viewControllers" id="fFI-ay-PUz"/>
+                        <segue destination="Gh2-Gs-Wvp" kind="relationship" relationship="viewControllers" id="oBx-YF-UbS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oZ0-wH-nSL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
