--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -53,10 +53,9 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsP-HP-ZAG">
-                                <rect key="frame" x="126.66666666666669" y="759" width="140" height="35"/>
+                                <rect key="frame" x="127" y="759" width="139" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Nc9-I7-hvt"/>
-                                    <constraint firstAttribute="width" constant="140" id="nm7-sg-jdr"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Set Skin Profile"/>
@@ -94,6 +93,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="301.52671755725191" y="-270.42253521126764"/>
+        </scene>
+        <!--Skin Check View Controller-->
+        <scene sceneID="KXp-SI-7BC">
+            <objects>
+                <viewController storyboardIdentifier="skinCheckStoryboard" id="Gb2-Ua-9Dr" customClass="SkinCheckViewController" customModule="Sunwise" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yF4-z2-RsR">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gXI-qD-d85">
+                                <rect key="frame" x="0.0" y="59" width="393" height="500"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="huV-4n-Nva"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2t-d4-RoL">
+                                <rect key="frame" x="0.0" y="556" width="393" height="296"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJx-zw-5o3">
+                                        <rect key="frame" x="40" y="221" width="313" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="ihf-Dq-GE9"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Set As My Skin Type"/>
+                                        <connections>
+                                            <action selector="skinTypeButtonTapped:" destination="Gb2-Ua-9Dr" eventType="touchUpInside" id="tcD-uX-5c3"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="UJx-zw-5o3" secondAttribute="bottom" constant="40" id="4MC-z8-48T"/>
+                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="leading" secondItem="K2t-d4-RoL" secondAttribute="leading" constant="40" id="Dou-MQ-IzX"/>
+                                    <constraint firstAttribute="trailing" secondItem="UJx-zw-5o3" secondAttribute="trailing" constant="40" id="WS2-aj-kO0"/>
+                                    <constraint firstAttribute="height" constant="296" id="x6c-BD-5C5"/>
+                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="centerX" secondItem="K2t-d4-RoL" secondAttribute="centerX" id="xNJ-BX-f5i"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3fg-Bf-iEj"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="K2t-d4-RoL" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="5XH-0D-9F3"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="KyJ-26-otH"/>
+                            <constraint firstItem="K2t-d4-RoL" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="atA-Sd-WsA"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="fhU-0j-iyC"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="top" secondItem="3fg-Bf-iEj" secondAttribute="top" id="koY-bI-ZU1"/>
+                            <constraint firstAttribute="bottom" secondItem="K2t-d4-RoL" secondAttribute="bottom" id="tby-Gr-o4J"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ydj-oD-N2g"/>
+                    <connections>
+                        <outlet property="SetSkinTypeButton" destination="UJx-zw-5o3" id="Gv5-1J-bIc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q5q-aS-hAG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2361" y="-261"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="LBb-U2-BEu">
@@ -151,6 +209,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
