--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -94,7 +95,7 @@
             </objects>
             <point key="canvasLocation" x="301.52671755725191" y="-270.42253521126764"/>
         </scene>
-        <!--Skin Check View Controller-->
+        <!--Skin Check-->
         <scene sceneID="KXp-SI-7BC">
             <objects>
                 <viewController storyboardIdentifier="skinCheckStoryboard" id="Gb2-Ua-9Dr" customClass="SkinCheckViewController" customModule="Sunwise" customModuleProvider="target" sceneMemberID="viewController">
@@ -102,10 +103,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gXI-qD-d85">
-                                <rect key="frame" x="0.0" y="59" width="393" height="500"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="gXI-qD-d85">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="560"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="500" id="huV-4n-Nva"/>
+                                    <constraint firstAttribute="height" constant="560" id="luJ-QT-mhN"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2t-d4-RoL">
@@ -137,21 +139,30 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="K2t-d4-RoL" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="5XH-0D-9F3"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="KyJ-26-otH"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="top" secondItem="yF4-z2-RsR" secondAttribute="top" id="HU5-jW-aJI"/>
                             <constraint firstItem="K2t-d4-RoL" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="atA-Sd-WsA"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="fhU-0j-iyC"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="top" secondItem="3fg-Bf-iEj" secondAttribute="top" id="koY-bI-ZU1"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="c9c-a5-qwx"/>
+                            <constraint firstItem="gXI-qD-d85" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="kGw-iu-1JU"/>
                             <constraint firstAttribute="bottom" secondItem="K2t-d4-RoL" secondAttribute="bottom" id="tby-Gr-o4J"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ydj-oD-N2g"/>
+                    <navigationItem key="navigationItem" title="Skin Check" id="ydj-oD-N2g">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="95o-R9-isi">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="sPP-iB-f9a">
+                                <rect key="frame" x="16" y="5" width="87" height="34.333333333333336"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="SetSkinTypeButton" destination="UJx-zw-5o3" id="Gv5-1J-bIc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q5q-aS-hAG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2361" y="-261"/>
+            <point key="canvasLocation" x="3286.2595419847326" y="-261.26760563380282"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="LBb-U2-BEu">
@@ -201,6 +212,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QaX-BB-Aaq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1350" y="690"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IpN-CY-p3c">
+            <objects>
+                <navigationController storyboardIdentifier="skinCheck" automaticallyAdjustsScrollViewInsets="NO" id="1dc-yd-Nhu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xjq-zf-dnA">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Gb2-Ua-9Dr" kind="relationship" relationship="rootViewController" id="wZR-w6-6KV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KUM-zd-ebi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2359.5419847328244" y="-261.26760563380282"/>
         </scene>
     </scenes>
     <resources>
