--- a/Sunwise/View/Weather/Weather.storyboard
+++ b/Sunwise/View/Weather/Weather.storyboard
@@ -202,7 +202,7 @@
                                                                                 <buttonConfiguration key="configuration" style="plain" title="See More &gt;&gt;"/>
                                                                                 <connections>
                                                                                     <action selector="seeMoreButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ByS-8b-FOC"/>
-                                                                                    <segue destination="FEe-I1-2m3" kind="presentation" id="IJD-cV-1nO"/>
+                                                                                    <segue destination="FEe-I1-2m3" kind="presentation" identifier="sunProtectionDetailVC" id="IJD-cV-1nO"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -350,10 +350,10 @@
             </objects>
             <point key="canvasLocation" x="5.343511450381679" y="-2.1126760563380285"/>
         </scene>
-        <!--SunProtectionDetail-->
+        <!--sunProtectionDetailVC-->
         <scene sceneID="TgW-0p-8bW">
             <objects>
-                <viewControllerPlaceholder storyboardName="SunProtectionDetail" id="FEe-I1-2m3" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="SunProtectionDetail" referencedIdentifier="sunProtectionDetailVC" id="FEe-I1-2m3" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZDr-Ri-u6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1019" y="-23"/>
